// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should fire click event on button element 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-deprecated-button-size-medium el-deprecated-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    <span
      class="mocked-styled-1 el-deprecated-button-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-deprecated-button-size-medium el-deprecated-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    <span
      class="mocked-styled-1 el-deprecated-button-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot for <ElAnchorButton> as a link button 1`] = `
<DocumentFragment>
  <a
    class="el-deprecated-button-size-medium el-deprecated-button-icon-only el-deprecated-anchor-button"
    href="https://example.com"
    rel="noOpener noReferrer"
    role="button"
    target="_blank"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 11h-7V4a1 1 0 1 0-2 0v7H4a1 1 0 1 0 0 2h7v7a1 1 0 1 0 2 0v-7h7a1 1 0 1 0 0-2Z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Button > should match snapshot for icon-only button 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-deprecated-button-size-medium el-deprecated-button-icon-only el-deprecated-button"
    data-variant="primary"
    role="button"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16.234 13.95 5.58-4.07a.5.5 0 0 0-.3-.93h-6.89l-2.13-6.54a.51.51 0 0 0-1 0l-2.09 6.54h-6.89a.5.5 0 0 0-.3.91l5.58 4.09-2.13 6.54a.5.5 0 0 0 .77.56l5.58-4.1 5.58 4.06a.5.5 0 0 0 .77-.56l-2.13-6.5Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button > should match snapshot with variant and icons 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-deprecated-button-size-medium el-deprecated-button"
    data-variant="primary"
    role="button"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16.234 13.95 5.58-4.07a.5.5 0 0 0-.3-.93h-6.89l-2.13-6.54a.51.51 0 0 0-1 0l-2.09 6.54h-6.89a.5.5 0 0 0-.3.91l5.58 4.09-2.13 6.54a.5.5 0 0 0 .77.56l5.58-4.1 5.58 4.06a.5.5 0 0 0 .77-.56l-2.13-6.5Z"
      />
    </svg>
    <span
      class="mocked-styled-1 el-deprecated-button-label"
    >
      Button
    </span>
    <svg
      class="el-icon"
      color="inherit"
      data-size="100%"
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16.234 13.95 5.58-4.07a.5.5 0 0 0-.3-.93h-6.89l-2.13-6.54a.51.51 0 0 0-1 0l-2.09 6.54h-6.89a.5.5 0 0 0-.3.91l5.58 4.09-2.13 6.54a.5.5 0 0 0 .77.56l5.58-4.1 5.58 4.06a.5.5 0 0 0 .77-.56l-2.13-6.5Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align center 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-deprecated-button-group-align-center el-deprecated-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align left 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-deprecated-button-group-align-left el-deprecated-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedButtonGroup > should match snapshot for align right 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 deprecated-el-button-group"
  >
    <div
      class="el-deprecated-button-group-align-right el-deprecated-button-group-inner"
    >
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          1
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          2
        </span>
      </button>
      <button
        aria-disabled="false"
        class="el-deprecated-button-size-medium el-deprecated-button"
        role="button"
      >
        <div
          class="mocked-styled-0 el-deprecated-button-spinner"
        />
        <span
          class="mocked-styled-1 el-deprecated-button-label"
        >
          3
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FloatingButton > should render FloatingButton with icon 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    class="el-deprecated-floating-button el-deprecated-button-size-medium el-deprecated-button-icon-only el-deprecated-button"
    role="button"
  >
    <div
      class="mocked-styled-0 el-deprecated-button-spinner"
    />
    star
  </button>
</DocumentFragment>
`;
